chore(package.json): add @types/bun and drizzle-kit as dependencies for type support and tooling chore(timestamps/package.json): specify drizzle-orm as peer dependency to ensure compatibility

--- a/packages/timestamp/package.json
+++ b/packages/timestamp/package.json
@@ -18,5 +18,8 @@
     "dist",
     "!**/*.tsbuildinfo"
   ],
-  "dependencies": {}
+  "dependencies": {},
+  "peerDependencies": {
+    "drizzle-orm": "^0.43.1"
+  }
 }
