--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bun": "^1.2.13",
     "@types/node": "18.16.9",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jiti": "2.4.2",
